objects/Colleagues__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Amount__c</fullName>
        <label>Pending Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Colleague</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Colleague Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colleagues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Invalid_amount_paid</fullName>
        <active>false</active>
        <errorConditionFormula>IF(Paid_Amount__c &gt; Pending_Amount__c, true, false)</errorConditionFormula>
        <errorMessage>Paid amount cannot be greater than pending amount</errorMessage>
    </validationRules>
</CustomObject>